--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,16 @@ configurations {
 	}
 }
 
+
 repositories {
 	mavenCentral()
 
 	maven {
 		url = uri("https://maven.pkg.github.com/QueueTicket/common")
+		credentials {
+			username = "QueueTicket"
+			password = System.getenv("GITHUB_TOKEN")
+		}
 	}
 }
 
@@ -34,7 +39,7 @@ ext {
 
 dependencies {
 
-	implementation 'com.qticket:common:0.0.12'
+	implementation 'com.qticket:common:0.0.14'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 //	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -43,13 +48,13 @@ dependencies {
 //	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 //	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 //	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
-//	implementation 'org.springframework.kafka:spring-kafka'
+	implementation 'org.springframework.kafka:spring-kafka'
 //	implementation 'com.h2database:h2:2.2.220'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-//	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	testImplementation 'org.springframework.kafka:spring-kafka-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
