--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,12 @@ server.port = 19091
 
 eureka.client.service-url.defaultZone=http://localhost:19090/eureka/
 
+
+spring.data.redis.host = ${REDIS_HOST}
+spring.data.redis.port = ${REDIS_PORT}
+spring.data.redis.username = ${REDIS_USERNAME}
+spring.data.redis.password=${REDIS_PASSWORD}
+
 ## kafka
 spring.kafka.bootstrap-servers= localhost:9092
 spring.kafka.consumer.group-id= coupon-group
