--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,4 @@
-spring.application.name=COUPON
-spring.datasource.url=jdbc:postgresql://localhost:5432/coupon
-spring.datasource.username=sanghoon
-spring.datasource.password=
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.application.name=coupon-server
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-
-server.port = 19091
-
-eureka.client.service-url.defaultZone=http://localhost:19090/eureka/
-
-
-spring.data.redis.host = ${REDIS_HOST}
-spring.data.redis.port = ${REDIS_PORT}
-spring.data.redis.username = ${REDIS_USERNAME}
-spring.data.redis.password=${REDIS_PASSWORD}
-
-## kafka
-spring.kafka.bootstrap-servers= localhost:9092
-spring.kafka.consumer.group-id= coupon-group
-spring.kafka.consumer.auto-offset-reset= earliest
-spring.kafka.consumer.key-deserializer= org.apache.kafka.common.serialization.StringDeserializer
-spring.kafka.consumer.value-deserializer= org.springframework.kafka.support.serializer.JsonDeserializer
-spring.kafka.producer.key-serializer= org.apache.kafka.common.serialization.StringSerializer
-spring.kafka.producer.value-serializer= org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.profiles.active=local
+spring.config.import=optional:configserver:http://localhost:18089
