--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
 	id 'org.springframework.boot' version '3.3.4'
 	id 'io.spring.dependency-management' version '1.1.6'
 	id 'maven-publish'
+	id 'com.google.cloud.tools.jib' version '3.2.0'
 }
 
 group = 'com.qticket'
@@ -58,7 +59,7 @@ dependencies {
 	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
 
 	implementation 'org.springframework.kafka:spring-kafka'
-//	implementation 'com.h2database:h2:2.2.220'
+	runtimeOnly 'com.h2database:h2:2.2.220'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -79,4 +80,17 @@ tasks.named('test') {
 
 clean {
 	delete file('src/main/generated')
+}
+
+jib {
+	from {
+		image = "openjdk:17-jdk-slim"
+	}
+	to {
+		image = "${project.name}:latest"
+	}
+	container {
+		mainClass = "com.qticket.coupon.CouponApplication"
+		creationTime = "USE_CURRENT_TIMESTAMP"
+	}
 }
