--- a/build.gradle
+++ b/build.gradle
@@ -85,9 +85,19 @@ clean {
 jib {
 	from {
 		image = "openjdk:17-jdk-slim"
+	platforms {
+		platform {
+			architecture = "arm64"
+			os = "linux"
+		}
+//		platform {
+//			architecture = "amd64"
+//			os = "linux"
+//		}
+	}
 	}
 	to {
-		image = "${project.name}:latest"
+		image = "shoon95/${project.name}:latest"
 	}
 	container {
 		mainClass = "com.qticket.coupon.CouponApplication"
