--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=coupon-server
 
-spring.profiles.active=local
-spring.config.import=optional:configserver:http://localhost:18089
+spring.profiles.active=test
+spring.config.import=optional:configserver:http://config-app:18089
