--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -25,6 +25,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    - name: Configure AWS credentials   # AWS 자격증명 설정
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
+
     - name: Set up JDK 17   # Jib을 사용하려면 JDK 필요
       uses: actions/setup-java@v3
       with:
